build(java): update projet to use java 24